fix: replace old product detail with new product detail